@@ -55,6 +55,6 @@ bmc_config_SOURCES = \
 	bmc-config-validate.c
 
 $(top_builddir)/common/src/configtool/libconfigtoolcommon.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
+	@cd `dirname $@` && $(MAKE) `basename $@`
 
 force-dependency-check:
