@@ -20,6 +20,6 @@ bmc_info_SOURCES = \
 	bmc-info-argp.c 
 
 $(top_builddir)/common/src/toolcommon/libtoolcommon.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
+	@cd `dirname $@` && $(MAKE) `basename $@`
 
 force-dependency-check:
