@@ -35,6 +35,6 @@ libconfigtoolcommon_la_SOURCES = \
 	config-tool-validate.c
 
 $(top_builddir)/common/src/toolcommon/libtoolcommon.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
+	@cd `dirname $@` && $(MAKE) `basename $@`
 
 force-dependency-check:
