@@ -33,6 +33,6 @@ ipmi_chassis_config_SOURCES = \
 	ipmi-chassis-config-validate.c
 
 $(top_builddir)/common/src/configtool/libconfigtoolcommon.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
+	@cd `dirname $@` && $(MAKE) `basename $@`
 
 force-dependency-check:
