@@ -26,7 +26,7 @@ ipmi_fru_SOURCES = \
 	ipmi-fru-util.c
 
 $(top_builddir)/common/src/toolcommon/libtoolcommon.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
+	@cd `dirname $@` && $(MAKE) `basename $@`
 
 force-dependency-check:
  
