@@ -24,6 +24,6 @@ ipmi_sel_SOURCES = \
 	ipmi-sel-entry.c
  
 $(top_builddir)/common/src/toolcommon/libtoolcommon.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
+	@cd `dirname $@` && $(MAKE) `basename $@`
 
 force-dependency-check:
