@@ -31,6 +31,6 @@ ipmi_sensors_config_SOURCES = \
 	ipmi-sensors-config-utils.c
 
 $(top_builddir)/common/src/configtool/libconfigtoolcommon.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
+	@cd `dirname $@` && $(MAKE) `basename $@`
 
 force-dependency-check:
